--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>order-service</module>
         <module>inventory-service</module>
         <module>discovery-server</module>
+        <module>api-gateway</module>
     </modules>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
