--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 server-error.include-message=always
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+#Zipkin
+spring.zipkin.base-url=http://localhost:9411
+spring-sleuth.sampler.probability=1.0
