--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -11,4 +11,8 @@ server-error.include-message=always
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
+#Zipkin
+spring.zipkin.base-url=http://localhost:9411
+spring-sleuth.sampler.probability=1.0
+
 
